# flake8-qiskit-migration

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pull-request.yml  python-publish.yml
flake8_qiskit_migration/: command.py  deprecated_paths_v2.py  plugin.py
tests/: test.py
